--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <li class="thanhdieutransform"> C++ </li>
                 <li class="xuannghieptransform">Python</li>
                 <br>
-                <li class="xuannghieptransform">Yeu Em</li>
+                <li class="xuannghieptransform">Java</li>
                 <li class="xuannghieptransform">Html/Css</li>
                 <br>
             </ul>
